fixed nav on firefox

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,20 @@ TABLE OF CONTENTS
 **********************************/
 
 /***********GENERAL ATTRIBUTES*********/
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  nav {
+    backdrop-filter: blur(8.3px);
+    background: rgba(255, 255, 255, 0.3);
+  }
+}
+
+/* slightly transparent fallback for Firefox (not supporting backdrop-filter) */
+@supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+  nav {
+    background: rgb(255, 255, 255);
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -126,10 +140,9 @@ nav {
   position: fixed;
   z-index: 2;
   width: 100%;
-
-  background: rgba(255, 255, 255, 0.3);
+  // backdrop-filter: blur(8.3px);
+  // background: rgba(255, 255, 255, 0.3);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(8.3px);
 
   img {
     width: 12rem;
@@ -479,7 +492,7 @@ nav {
   height: fit-content;
   background-color: #fff;
   width: 100%;
-  animation: slide-top 0.4s linear;
+  animation: 0.4s linear slide-top;
   margin-left: 0;
   display: none;
 
@@ -924,6 +937,30 @@ footer {
   }
 }
 
+.hidden {
+  display: none;
+  position: relative;
+}
+
+.rotate {
+  animation: 0.3s linear arrow-rotate;
+  transform: rotate(-180deg);
+}
+
+@keyframes arrow-rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(-180deg);
+  }
+}
+
+.info-active {
+  display: block;
+}
+
 #icons {
   display: flex;
   justify-content: space-around;
@@ -942,6 +979,11 @@ footer {
   svg {
     width: 5rem;
   }
+}
+
+#details-p,
+#description-p {
+  animation: 0.4s linear slide-top;
 }
 
 @media only screen and (max-width: 795px) {
